# cifix-learning

./: .gitignore  README.md  pyproject.toml
src/cifix/: cache.py  classifier.py  cli.py  formatter.py  github.py  patterns.py  preprocessor.py
src/cifix/cli/: __init__.py  diagnose_cmd.py  fix_cmd.py
src/cifix/fixer/: ruff_fixer.py
tests/: test_cache.py  test_classifier.py  test_cli_commands.py  test_diagnose_cmd.py  test_ruff_fixer.py
